@@ -434,22 +434,33 @@ indicator<span class="count">( {_it./indicator.length} )</span>
 		{_it./indicator&&_it:indicator-length||}
 	</div>
 </div>
-<div class="wrap_result_text">
+<div class="wrap_result_text">{_it./reference&&_it:/result_text_reference||_it:/result_text||}</div>
+<div class="wrap_result_indicator">{_it./indicator:/result_indicator_facet||}</div>
+
+#^/result_text_reference
+<div class="result_indicator left_indi">
 	{_it./title/narrative.0.text&&_it:/result_title_text||}
 	{_it./description/narrative&&_it:/indicator_desc||}
+</div><div class="result_indicator">
+	{_it./reference&&_it:/wrap-result-reference||}
 </div>
-<div class="wrap_result_indicator">{_it./indicator:/result_indicator_facet||}</div>
+{_it./document-link&&_it:/wrap-document-link||}	
+
+#^/result_text
+{_it./title/narrative.0.text&&_it:/result_title_text||}
+{_it./description/narrative&&_it:/indicator_desc||}
+{_it./document-link&&_it:/wrap-document-link||}
 
 #^/result_title_text
 <div class="result_main_title">{_it./title/narrative.0.text||}</div>
 
 #^/result_indicator_facet
-{_it:/result_indicator_row_new_indicator||}
+{_it:/result_indicator_row_indicator||}
 <div class="wrap_result_table">
 	<table class="budget result sortable">
 		{result-table}
 		{_it.@measure&&_it:/result_measure||}
-		{_it./facet:/result_indicator_row_new_all||}
+		{_it./facet:/result_indicator_row_all||}
 	</table>
 </div>
 
@@ -475,64 +486,40 @@ indicator<span class="count">( {_it./indicator.length} )</span>
 	<td></td>
 </tr>
 
-#^/result_indicator_row_new_all
-{_it./value:/result_indicator_row_new||}
+#^/result_indicator_row_all
+{_it./value:/result_indicator_row||}
 
-#^/result_indicator_row_new_indicator		<!--	RESULT INDICATOR SECTION : TITLE, DESCRIPTION & OTHER INFORMATION	-->
-{_it./reference||_it./document-link&&_it:/indicator_text_reference||_it:/indicator_text||}
+#^/result_indicator_row_indicator		<!--	RESULT INDICATOR SECTION : TITLE, DESCRIPTION & OTHER INFORMATION	-->
+{_it./reference&&_it:/indicator_text_reference||_it:/indicator_text||}
 
 #^/indicator_text_reference					<!--	USE WHEN REFERENCE OR DOCUMENTS ARE PUBLISHED	-->
-<div class="wrap_result_indicator_title">
+<div class="wrap_result_indicator">
 	<div class="header_section collapsable brighter">INDICATOR</div>
 	<div class="result_indicator left_indi">
 		<div class="result_title">{_it./title/narrative.0.text||}</div>
 		{_it./description/narrative&&_it:/indicator_desc||}
-	</div><div class="result_indicator">
-		{_it./document-link&&_it:/wrap-document-link||}	
+	</div><div class="result_indicator">	
 		{_it./reference&&_it:/wrap-result-reference||}
 	</div>
+	{_it./document-link&&_it:/wrap-document-link||}
 </div>
 
 #^/indicator_text
-<div class="wrap_result_indicator_title">
+<div class="wrap_result_indicator">
 	<div class="header_section collapsable brighter">INDICATOR</div>
 	<div class="result_title">{_it./title/narrative.0.text||}</div>
 	{_it./description/narrative&&_it:/indicator_desc||}
+	{_it./document-link&&_it:/wrap-document-link||}
 </div>
 
 #^/indicator_desc
 <div class="result_indi_desc">{_it./description/narrative.0.text||}</div>
 
-#^/empty_dimension
-<div class="result_empty">No dimension has been provided</div>
-#^/empty_location
-<div class="result_empty">No location has been provided</div>
-
-#^/result_indicator_row_new_facet_dimension
-<div class="result_facet">
-	<span class="result_facet_name">{_it.@name}</span> = <span class="result_facet_value">{_it.@value}</span>
-</div>
-
-#^/result_indicator_row_new_facet_location
-<div class="result_facet">
-	<span class="result_facet_name">Location</span> = <span class="result_facet_value">{_it.@ref}</span>
-</div>
-
-#^@percent trim=ends
-<!--<div class="result_percent_wrap">{_it.@percent}%<span style="background-color:{status.{_it.@percent}};"></span></div>-->
-<div class="result_percent_wrap">
-	<span class="result_percent_value">{_it.@percent}%</span>
-	<span class="result_percent_dot" style="background-color:hsl({_it.@percent||},100%,50%);"></span>
-</div>
-
-#^@percent-null trim=ends
-<div class="result_percent_wrap">N/A</div>
-
-#^/result_indicator_row_new					<!--	RESULTS FACETS, BASELINE, TARGET, ACTUAL AND PERIOD	-->
+#^/result_indicator_row				<!--	RESULTS FACETS, BASELINE, TARGET, ACTUAL AND PERIOD	-->
 <tr class="row_count">
 	<td class="result_indi">
-		{_it./dimension:/result_indicator_row_new_facet_dimension||/empty_dimension}
-		{_it./location:/result_indicator_row_new_facet_location||/empty_location}
+		{_it./dimension:/result_indicator_row_facet_dimension||/empty_dimension}
+		{_it./location:/result_indicator_row_facet_location||/empty_location}
 	</td>
 	<td class="result_base">{_it.@baseline-year&&_it:/result_year||}{_it.@baseline||/empty_result}</td>
 	<td class="result_target">{_it.@target||/empty_result}</td>
@@ -546,19 +533,38 @@ indicator<span class="count">( {_it./indicator.length} )</span>
 	</td>
 </tr>
 
+#^/empty_dimension
+<div class="result_empty">No dimension has been provided</div>
+#^/empty_location
+<div class="result_empty">No location has been provided</div>
+
+#^/result_indicator_row_facet_dimension
+<div class="result_facet">
+	<span class="result_facet_name">{_it.@name}</span> = <span class="result_facet_value">{_it.@value}</span>
+</div>
+
+#^/result_indicator_row_facet_location
+<div class="result_facet">
+	<span class="result_facet_name">Location</span> = <span class="result_facet_value">{_it.@ref}</span>
+</div>
+
+#^/result_year
+<div class="result_base_year">{_it.@baseline-year||}</div>
+#^/empty_result
+<div class="result_empty">Not provided</div>
+
+#^@percent trim=ends
+<div class="result_percent_wrap">
+	<span class="result_percent_value">{_it.@percent}%</span>
+	<span class="result_percent_dot" style="background-color:hsl({_it.@percent||},100%,50%);"></span>
+</div>
+#^@percent-null trim=ends
+<div class="result_percent_wrap">N/A</div>
+
 #^period form=json	<!--	DATE BACKGROUND COLOR	-->
 {
 	"100":"rgb(100,100,100)",
 }
-
-#^/result_year
-<div class="result_base_year">{_it.@baseline-year||}</div>
-
-#^/empty_result
-<div class="result_empty">Not provided</div>
-
-#^/facet_text
-<div class="result_indicator">{_it}</div>
 
 #^/wrap-result-reference
 <div class="wrap_result_indi_ref">
