@@ -2,8 +2,9 @@ Development Portal (2020-03-08 shi)
 ==============================
 Fix result title and description display
 Add indicator length
-Update result css
+Update result, document-link css
 Cleanup glossary section
+Update display for combination of result reference, doc, title
 
 
 Development Portal (2020-03-05 shi)
